--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <meta name="description" content="Jacqueline Nguyen is a student at Tufts University (Class of 2021) studying Computer Science. Eager to acquire leadership skills and experience in a professional workplace. Fast-learner, hardworking, and excited to make a difference with technology.">
     <title>Jacqueline Nguyen</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="/scripts/website.js" type="text/javascript"></script>
+    <script src="scripts/website.js" type="text/javascript"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.1/p5.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.1/addons/p5.dom.js"></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=News+Cycle&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="/styles/style.css" type="text/css">
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="styles/style.css" type="text/css">
 </head>
 <body>
     <nav class="navbar navbar-expand-md fixed-top">
@@ -25,8 +25,8 @@
             </div>
         </div>
 
-        <a class="navbar-brand mx-auto order-md-1" href="/">
-            <img id="logo" height="10vh" src="/images/logo.png" alt="logo">
+        <a class="navbar-brand mx-auto order-md-1" href="/website-v1">
+            <img id="logo" height="10vh" src="images/logo.png" alt="logo">
         </a>
         <button class="navbar-toggler custom-toggler position-absolute" type="button" data-toggle="collapse" data-target=".navbar-toggle" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"><span>
@@ -35,7 +35,7 @@
         <div class="collapse navbar-collapse navbar-toggle order-2 order-md-2">
             <div class="navbar-nav mr-auto text-center">
                 <a class="nav-item nav-link" href="#contact">contact</a>
-                <a class="nav-item nav-link" href="/files/resume.pdf" target="_blank">resume</a>
+                <a class="nav-item nav-link" href="files/resume.pdf" target="_blank">resume</a>
             </div>
         </div>
     </nav>
@@ -52,20 +52,20 @@
         <div id="front">
             <h1 class="collapse">JACQUELINE N.</h1>
             <a class="collapse position-absolute mx-auto" href="#about">Get to know me.
-                <p class="text-center"><img src="/images/down-arrow.png" alt="down arrow"></p>
+                <p class="text-center"><img src="images/down-arrow.png" alt="down arrow"></p>
             </a>
 
         </div>
         <div id="about" class="d-flex align-items-center">
             <div class="row">
                 <div class="col-lg-5 mr-auto">
-                    <img id="headshot" src="/images/headshot.jpg" class="img-fluid left" alt="headshot">
+                    <img id="headshot" src="images/headshot.jpg" class="img-fluid left" alt="headshot">
                 </div>
                 <div id="info" class="col-lg-6">
                     <div class="d-flex justify-content-center"><button id="showi" class="btn active">info</button><button id="shows" class="btn">skills</button></div>
                     <br>
                     <div id="intro">
-                        <h1>Hello.  <img src="/images/emoji_18.gif" alt="emoji"></h1>
+                        <h1>Hello.  <img src="images/emoji_18.gif" alt="emoji"></h1>
                         <h1>I'm <span class="text">Jacqueline.<div id="animation" class="fadingEffect paused"></div></span></h1>
                         <hr>
                         <div><h3 class="pink">from</h3><h2>Boston, Massachusetts</h2></div>
@@ -108,7 +108,7 @@
                     <div class="row">
                         <div class="col">
                             <div class="card">
-                                <img class="card-img-top" src="/images/scribbles.jpg" alt="Card image cap">
+                                <img class="card-img-top" src="images/scribbles.jpg" alt="Card image cap">
                                 <div class="card-body">
                                     <h5 class="card-title font-weight-bold">Scribbles It!</h5>
                                     <p class="card-text">Featuring a shared, real-time drawing canvas, and a drawing game inspired by "Draw My Thing," Scribbles It! is a fun web app to share with friends! Finalist in Tufts Polyhack 2019.</p></br>
@@ -119,7 +119,7 @@
                         </div>
                         <div class="col">
                             <div class="card">
-                                <img class="card-img-top" src="/images/jammit.jpg" alt="Card image cap">
+                                <img class="card-img-top" src="images/jammit.jpg" alt="Card image cap">
                                 <div class="card-body">
                                     <h5 class="card-title font-weight-bold">God Jammit!</h5>
                                     <p class="card-text">With God Jammit!, you can now jam with friends online with a connected MIDI instrument or your keyboard! Features dynamic jamming rooms with the ability to record and save your tunes.</p>
@@ -136,7 +136,7 @@
                     <div class="row">
                         <div class="col">
                             <div class="card">
-                                <img class="card-img-top" src="/images/prodiv.jpg" alt="Card image cap">
+                                <img class="card-img-top" src="images/prodiv.jpg" alt="Card image cap">
                                 <div class="card-body">
                                     <h5 class="card-title font-weight-bold">Prodiv</h5>
                                     <p class="card-text">Ever since freshman year, I wanted to make a web app that allows you to customize a dashboard with helpful widgets to keep you organized and productive. I'm planning to also learn React through this project. 😄</p>
@@ -161,6 +161,6 @@
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
-    <script src="/scripts/animation.js" type="text/javascript"></script>
+    <script src="scripts/animation.js" type="text/javascript"></script>
 </body>
 </html>
